--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Exchanger</string>
 
+    <!-- main screen -->
+    <string name="button_main">Все валюты</string>
+    <string name="button_favourite">Избранные</string>
+    <string name="bottom_nav_menu_home_title">Home</string>
+    <string name="bottom_nam_menu_favourites_title">Favourites</string>
+
+
 </resources>
