--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="bottom_nav_menu_home_title">Home</string>
     <string name="bottom_nam_menu_favourites_title">Favourites</string>
 
+    <!-- error -->
+    <string name="cannot_download_favourites">Не удалось загрузить актуальные данные по избранным валютам</string>
+    <string name="cannot_download_currency">Не удалось загрузить данные по валютам</string>
+
 
 </resources>
